# AutoBrightnessCam

./: .gitignore  .travis.yml  .vimrc  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO.md  TestLists  autogen.sh  clean.sh  configure  configure.ac  vim_all_source.sh
source/: Makefile.am  Makefile.in  sources_check_core.mk  sources_check_libs.mk  sources_core.mk  sources_core_ui.mk  sources_libs.mk
source/data/config/aubrca/: defaults.conf
source/data/systemd/: autobrightnesscam.service.in
source/inc/: abc_brightness_calculator.h  abc_brightness_control.h  abc_common.h
source/inc/abc_ambient_brightness_controller/: abc_ambient_brightness_controller.h
source/inc/abc_backlight_brightness_controller/: abc_backlight_brightness_controller.h
source/inc/abc_brightness_service/: abc_brightness_service.h
source/inc/abc_filter/: abc_filter.h
source/inc/abc_logging_service/: abc_logging_service.h
source/inc/abc_terminal_controller/: abc_terminal_controller.h
source/inc/abc_time_service/: abc_time_service.h
source/inc_test/abc_backlight_brightness_controller/: fake_abc_io_service.h  fake_abc_terminal_controller.h
source/inc_test/abc_brightness_service/: fake_abc_backlight_brightness_controller.h  fake_abc_power_controller.h  fake_abc_terminal_controller.h
source/inc_test/abc_power_controller/: fake_abc_terminal_controller.h
source/libs/inc/abc_backlight_brightness_controller/: abc_backlight_brightness_controller.h
source/libs/inc/abc_backlight_controller/: abc_backlight_controller.h
source/libs/inc/abc_brightness_service/: abc_brightness_service.h
source/libs/inc/abc_config_service/: abc_config_service.h
source/libs/inc/abc_filter/: abc_filter.h
source/libs/inc/abc_io_service/: abc_io_service.h
source/libs/inc/abc_logging_service/: abc_logging_service.h
source/libs/inc/abc_power_controller/: abc_power_controller.h
source/libs/inc/abc_terminal_controller/: abc_terminal_controller.h
source/libs/inc/abc_time_service/: abc_time_service.h
source/libs/inc/abc_utils/: abc_utils.h
source/libs/inc_test/abc_ambient_brightness_controller/: fake_abc_terminal_controller.h
source/libs/inc_test/abc_brightness_service/: fake_abc_ambient_brightness_controller.h  fake_abc_filter.h  fake_abc_time_service.h
source/libs/inc_test/abc_config_service/: fake_abc_io_service.h  fake_abc_terminal_controller.h
source/libs/inc_test/abc_power_controller/: fake_abc_io_service.h  fake_abc_terminal_controller.h
source/libs/src/abc_ambient_brightness_controller/: abc_ambient_brightness_controller.c
source/libs/src/abc_ambient_controller/: abc_ambient_controller.c
source/libs/src/abc_backlight_controller/: abc_backlight_controller.c
source/libs/src/abc_brightness_service/: abc_brightness_service.c
source/libs/src/abc_config_service/: abc_config_service.c  abc_config_service_common.h  abc_config_service_custom.c  abc_config_service_libconfig.c
source/libs/src/abc_filter/: abc_filter.c
source/libs/src/abc_io_service/: abc_io_service.c
source/libs/src/abc_logging_service/: abc_logging_service.c
source/libs/src/abc_power_controller/: abc_power_controller.c
source/libs/src/abc_terminal_controller/: abc_terminal_controller.c
source/libs/src/abc_time_service/: abc_time_service.c
source/src/: abc_brightness_calculator.c  abc_brightness_control.c
source/src/abc_ambient_brightness_controller/: Makefile.in  abc_ambient_brightness_controller.c
source/src/abc_backlight_brightness_controller/: Makefile.in  abc_backlight_brightness_controller.c
source/src/abc_brightness_service/: Makefile.in  abc_brightness_service.c
source/src/abc_filter/: abc_filter.c
source/src/abc_io_service/: abc_io_service.c
source/src/abc_logging_service/: abc_logging_service.c
source/src/abc_power_controller/: Makefile.in  abc_power_controller.c
source/src/abc_terminal_controller/: abc_terminal_controller.c
source/src/abc_time_service/: Makefile.in  abc_time_service.c
source/src/main/: Makefile.in  main.c
source/src_test/abc_ambient_brightness_controller/: fake_abc_terminal_controller.c
source/src_test/abc_backlight_brightness_controller/: fake_abc_backlight_brightness_controller.c  fake_abc_io_service.c  fake_abc_terminal_controller.c  fake_abc_time_service.c
source/src_test/abc_brightness_service/: Makefile.in  fake_abc_ambient_brightness_controller.c  fake_abc_backlight_brightness_controller.c  fake_abc_filter.c  fake_abc_power_controller.c  fake_abc_time_service.c
source/src_test/abc_filter/: fake_placeholder.c
source/src_test/abc_io_service/: fake_placeholder.c
source/src_test/abc_logging_service/: fake_placeholder.c
source/src_test/abc_power_controller/: fake_abc_terminal_controller.c
source/src_test/abc_terminal_controller/: fake_placeholder.c
source/targets/: Common.in  Common.mk  CommonTargets.mk  Makefile
source/targets/abc_ambient_brightness_controller/: Makefile
source/targets/abc_backlight_brightness_controller/: Makefile
source/targets/abc_brightness_service/: Makefile
source/targets/abc_filter/: Makefile
source/targets/abc_io_service/: Makefile
source/targets/abc_logging_service/: Makefile
source/targets/abc_power_controller/: Makefile
source/targets/abc_terminal_controller/: Makefile
source/targets/abc_time_service/: Makefile
source/targets/main/: Makefile
source/tests/: tests_abc_brightness_calculator.cpp  tests_abc_brightness_control.cpp
source/tests/abc_ambient_brightness_controller/: tests_abc_ambient_brightness_controller.cpp
source/tests/abc_backlight_brightness_controller/: tests_abc_backlight_brightness_controller.cpp
source/tests/abc_brightness_service/: Makefile.in  tests_abc_brightness_service.cpp  tests_fake_abc_time_service.cpp
source/tests/abc_filter/: tests_abc_filter.cpp
source/tests/abc_io_service/: tests_abc_io_service.cpp
source/tests/abc_logging_service/: tests_abc_logging_service.cpp
source/tests/abc_power_controller/: tests_abc_power_controller.cpp
source/tests/abc_terminal_controller/: tests_abc_terminal_controller.cpp
(+44 files in other folders)
